[gd_scene load_steps=14 format=3 uid="uid://d2oh8oq4wds0h"]

[ext_resource type="Script" path="res://scripts/enemies/angel.gd" id="1_muwug"]
[ext_resource type="PackedScene" uid="uid://buribwjfbhwro" path="res://models/dynamic_props/enemies/angel.glb" id="1_qe7aq"]
[ext_resource type="Material" uid="uid://dl3bbu8l4e8pk" path="res://resources/materials/specific_mats/angel_mat.tres" id="2_an8gs"]
[ext_resource type="Script" path="res://scripts/enemies/angel_anim.gd" id="2_nvh6n"]
[ext_resource type="ArrayMesh" uid="uid://wmyml2xrli80" path="res://models/dynamic_props/enemies/angel_halo.obj" id="2_o6f4o"]
[ext_resource type="ArrayMesh" uid="uid://qtwn8oxc0e0y" path="res://models/dynamic_props/enemies/angel_left_wing.obj" id="3_ls4cu"]
[ext_resource type="ArrayMesh" uid="uid://c40kxk52n1ndu" path="res://models/dynamic_props/enemies/angel_right_wing.obj" id="4_hciva"]
[ext_resource type="PackedScene" uid="uid://cd6bos2i6d23v" path="res://scenes/editor_tools/difficulty_visualiser.tscn" id="9_2jhd6"]
[ext_resource type="FontVariation" uid="uid://cr4vqwh16ob78" path="res://resources/default_font.tres" id="9_v64d2"]
[ext_resource type="PackedScene" uid="uid://d4k7qjsc8bglc" path="res://scenes/enemy_home.tscn" id="10_sjg72"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_258bd"]
height = 3.40052
radius = 1.48798

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vxsgv"]
transparency = 1
shading_mode = 0

[sub_resource type="CylinderMesh" id="CylinderMesh_0iwtb"]
top_radius = 1.5
bottom_radius = 1.5
height = 3.0
radial_segments = 12

[node name="angel" type="Node3D" groups=["enemy", "unhealable"]]
top_level = true
script = ExtResource("1_muwug")

[node name="mesh" type="Node3D" parent="."]
script = ExtResource("2_nvh6n")

[node name="halo" type="MeshInstance3D" parent="mesh"]
transform = Transform3D(0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 0, 2.96386, -0.059214)
material_override = ExtResource("2_an8gs")
cast_shadow = 0
mesh = ExtResource("2_o6f4o")
skeleton = NodePath("")

[node name="left_wing" type="MeshInstance3D" parent="mesh"]
transform = Transform3D(0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 0, 1.5, 0)
material_override = ExtResource("2_an8gs")
cast_shadow = 0
mesh = ExtResource("3_ls4cu")
skeleton = NodePath("")

[node name="right_wing" type="MeshInstance3D" parent="mesh"]
transform = Transform3D(0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 0, 1.5, 0)
material_override = ExtResource("2_an8gs")
cast_shadow = 0
mesh = ExtResource("4_hciva")
skeleton = NodePath("")

[node name="body" parent="mesh" instance=ExtResource("1_qe7aq")]
transform = Transform3D(0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 0, 1.5, 0)

[node name="health" type="Label3D" parent="mesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.26816, 0)
visibility_range_end = 42.0
visibility_range_end_margin = 0.1
billboard = 1
texture_filter = 0
text = "500"
font = ExtResource("9_v64d2")
font_size = 64

[node name="raycast_collision" type="CharacterBody3D" parent="." groups=["enemy_raycast_collision"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.05309, 0)
collision_layer = 4
collision_mask = 0

[node name="raycast_hitbox" type="CollisionShape3D" parent="raycast_collision"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.430418, 0)
shape = SubResource("CylinderShape3D_258bd")

[node name="difficulty_visualiser" parent="." instance=ExtResource("9_2jhd6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
material_override = SubResource("StandardMaterial3D_vxsgv")
mesh = SubResource("CylinderMesh_0iwtb")
radius = 1.5
height = 3.0

[node name="home" parent="." instance=ExtResource("10_sjg72")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
color = Color(1, 1, 0, 1)

[node name="ray" type="RayCast3D" parent="."]

[node name="respawn" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="timeout" from="respawn" to="." method="_on_respawn_timeout"]
